--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ ocrd-olahd-client = "ocrd_olahd_client.cli:cli"
 
 [tool.setuptools.package-data]
 "*" = ["*.json"]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
